--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@next/font": "13.0.6",
+    "@vercel/analytics": "^0.1.11",
     "clsx": "^1.2.1",
     "next": "^13.0.6",
     "nextra": "latest",
