--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,7 +7,7 @@ name: Deploy Next.js site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,7 +21,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -31,11 +31,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: '20'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2.4.0
@@ -48,7 +48,7 @@ jobs:
         uses: actions/configure-pages@v3
         with:
           static_site_generator: next
-          
+
       - name: Restore cache
         uses: actions/cache@v3
         with:
@@ -59,16 +59,13 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-            
+
       - name: Install dependencies
         run: pnpm install
-        
+
       - name: Build with Next.js
         run: pnpm next build
-        
-      - name: Static HTML export with Next.js
-        run: pnpm next export
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
