--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@tabler/icons-react": "^3.29.0",
     "geist": "^1.3.1",
     "next": "15.1.5",
-    "nextra": "^4.0.4",
-    "nextra-theme-docs": "^4.0.4",
+    "nextra": "^4.1.0",
+    "nextra-theme-docs": "^4.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
