--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,7 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tabler/icons-react": "^3.30.0",
     "geist": "^1.3.1",
-    "next": "15.1.7",
+    "next": "^15.2.0",
     "nextra": "^4.2.13",
     "nextra-theme-docs": "^4.2.13",
     "react": "^19.0.0",
