--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && pagefind --site out --output-path out/_pagefind",
     "start": "next start",
     "lint": "next lint",
     "fmt": "bun prettier --write ."
