--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.2.0",
     "@runtipi/common": "^0.6.0",
     "@tabler/icons-react": "^3.30.0",
+    "@types/js-yaml": "^4.0.9",
     "ajv": "^8.17.1",
     "better-ajv-errors": "^1.2.0",
     "geist": "^1.3.1",
+    "js-yaml": "^4.1.0",
     "next": "^15.3.1",
     "nextra": "^4.2.13",
     "nextra-theme-docs": "^4.2.13",
@@ -25,6 +27,7 @@
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
